<resources>
    <string name="app_name">Stock_News_Tracker</string>
    <string name="setting_stock">종목 설정</string>
    <string name="stocks_data">종목 데이터</string>
    <string name="setting">설정</string>
    <string name="tracking_your_stock">당신의 주식을\n지금 추적하세요!</string>
    <string name="select_subject">종목 설정</string>
    <string name="good_thing">호재</string>
    <string name="bad_thing">악재</string>
    <string name="start_tracking">시작하기</string>
</resources>